 -- Added destroy_nodes - script to destroy cluster compute nodes
 -- Added data migration workflow example jobs and configuration
 -- oslogin can be disabled to allow other user and authentication methods
 -- Cluster synchronizes to configuration
 -- Fix placement groups leak on `terraform destroy`
 -- Allow custom Prolog and Epilog scripts
 -- Expose slurm.conf node configuration options

Changes in Slurm-GCP 4.1.5
==========================
 -- Fix partition-specific network storage from controller to compute nodes.
 -- Bump urllib3 from 1.26.4 to 1.26.5 in /foundry.
 -- Bump ipython from 7.21.0 to 7.31.1 in /foundry.

Changes in Slurm-GCP 4.1.4
==========================
 -- Updated Singularity download URL in custom-controller-install script.
 -- Fix static compute nodes being destroyed when exclusive=true
 -- Add CompleteWait to mitigate a race of latent operations from
    (Epilog|Prolog)Slurmctld from causing node failure on subsequent jobs.
 -- Fix calling "scontrol ... state=resume" in suspend.py for all nodes
    multiple times for exclusive jobs.

Changes in Slurm-GCP 4.1.3
==========================
 -- Add preliminary spot instance support eg. preemptible_bursting = "spot".
 -- Regularly delete instances corresponding to Slurm nodes that should be
    powered down.
 -- Upgrade to Slurm 21.08.4.
 -- Pin Nvidia driver to 460.106.00-1.
 -- Pin Cuda to 11.2.2.
 -- Pin gcloud to 365.0.1-1 on centos images - workaround broken package.
 -- Enable swap cgroup control on debian images - fixes a slurm compute node
    error.
 -- Add startup scripts as terraform vars.

Changes in Slurm-GCP 4.1.2
==========================
 -- setup.py - change LLN=yes to LLN=no

Changes in Slurm-GCP 4.1.1
==========================
 -- slurmsync.py - fix powering up nodes from being downed.

Changes in Slurm-GCP 4.1.0
==========================
 -- suspend.py - now handles "Quota exceeded" error
 -- Support for Intel-select options