@@ -1,4 +1,5 @@
 addict~=2.0
 google-api-python-client~=2.0
+google-cloud-secret-manager~=2.0
 google-cloud-storage~=1.0
 google-cloud-pubsub~=2.0
