@@ -1,5 +1,6 @@
 addict~=2.0
 grpcio<=1.33.2
 google-api-python-client~=2.0
+google-cloud-secret-manager~=2.0
 google-cloud-storage~=1.0
 google-cloud-pubsub~=2.0
