@@ -41,13 +41,13 @@ locals {
 
   munge_key = (
     var.munge_key == null
-    ? random_id.munge_key.b64_std
+    ? random_password.munge_key.result
     : var.munge_key
   )
 
   jwt_key = (
     var.jwt_key == null
-    ? random_id.jwt_key.b64_std
+    ? random_password.jwt_key.result
     : var.jwt_key
   )
 
@@ -64,9 +64,7 @@ locals {
     slurm_cluster_name = var.slurm_cluster_name
     project            = var.project_id
 
-    cloudsql  = var.cloudsql
-    munge_key = local.munge_key
-    jwt_key   = local.jwt_key
+    cloudsql = var.cloudsql
 
     pubsub_topic_id = google_pubsub_topic.this.name
 
@@ -127,12 +125,12 @@ data "local_file" "cgroup_conf_tpl" {
 resource "random_uuid" "slurm_cluster_id" {
 }
 
-resource "random_id" "munge_key" {
-  byte_length = 256
+resource "random_password" "munge_key" {
+  length = 256
 }
 
-resource "random_id" "jwt_key" {
-  byte_length = 256
+resource "random_password" "jwt_key" {
+  length = 256
 }
 
 ############
@@ -340,6 +338,44 @@ module "slurm_pubsub" {
   subscription_labels = {
     slurm_cluster_id = local.slurm_cluster_id
   }
+}
+
+###########
+# SECRETS #
+###########
+
+resource "google_secret_manager_secret" "munge_key" {
+  secret_id = "${var.slurm_cluster_name}-slurm-secret-munge_key"
+
+  replication {
+    automatic = true
+  }
+
+  labels = {
+    slurm_cluster_id = local.slurm_cluster_id
+  }
+}
+
+resource "google_secret_manager_secret_version" "munge_key_version" {
+  secret      = google_secret_manager_secret.munge_key.id
+  secret_data = local.munge_key
+}
+
+resource "google_secret_manager_secret" "jwt_key" {
+  secret_id = "${var.slurm_cluster_name}-slurm-secret-jwt_key"
+
+  replication {
+    automatic = true
+  }
+
+  labels = {
+    slurm_cluster_id = local.slurm_cluster_id
+  }
+}
+
+resource "google_secret_manager_secret_version" "jwt_key_version" {
+  secret      = google_secret_manager_secret.jwt_key.id
+  secret_data = local.jwt_key
 }
 
 ####################
